--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -27,11 +27,10 @@ body {
 
 a {
 	color: $linkcolor;
-	outline: 0;
 }
 
 a:hover, a:active, a:focus {
-	outline: inherit;
+	outline: 0;
 }
 
 a,a:visited {
